Scalar models needs work
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@68 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -449,3 +449,37 @@
       reportNumber   = "FERMILAB-PUB-10-042-A",
       SLACcitation   = "%%CITATION = ARXIV:1003.0014;%%",
 }
+
+@article{Agrawal:2014una,
+      author         = "Agrawal, Prateek and Batell, Brian and Hooper, Dan and
+                        Lin, Tongyan",
+      title          = "{Flavored Dark Matter and the Galactic Center Gamma-Ray
+                        Excess}",
+      journal        = "Phys.Rev.",
+      number         = "6",
+      volume         = "D90",
+      pages          = "063512",
+      doi            = "10.1103/PhysRevD.90.063512",
+      year           = "2014",
+      eprint         = "1404.1373",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-14-069-A-T",
+      SLACcitation   = "%%CITATION = ARXIV:1404.1373;%%",
+}
+
+@article{Boucheneb:2014wza,
+      author         = "Boucheneb, Idir and Cacciapaglia, Giacomo and Deandrea,
+                        Aldo and Fuks, Benjamin",
+      title          = "{Revisiting monotop production at the LHC}",
+      journal        = "JHEP",
+      volume         = "1501",
+      pages          = "017",
+      doi            = "10.1007/JHEP01(2015)017",
+      year           = "2015",
+      eprint         = "1407.7529",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-140, LYCEN-2014-11",
+      SLACcitation   = "%%CITATION = ARXIV:1407.7529;%%",
+}
