--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -76,9 +76,9 @@
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
 
-\section{Scalar models}
-\label{subsec:ScalarModels}
-\input{tex/ScalarModels}
+% \section{Scalar models}
+% \label{subsec:ScalarModels}
+% \input{tex/ScalarModels}
 
 \section{Specific models for signatures with EW bosons}
 \label{subsec:EWSpecificModels}
