--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -18,7 +18,7 @@ Section~\ref{subsec:MonojetLikeModels}.
   for V+MET searches, adapted from~\cite{Nelson:2013pqa}. \label{fig:VPlusMET_EFT}}
 \end{figure}
 % 
-The models considered can be divided in categories:
+The models considered can be divided in three categories:
 \begin{description}
  \item[Models including a contact operator, where the boson is radiated from the initial state] As depicted in 
  the top diagram of Figure~\ref{fig:VPlusMET_EFT}, these models follow the nomenclature and theory 
