Removed appendix extra text until I understand why it interferes w/frontmatter
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@72 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -54,10 +54,11 @@
 
 \usepackage{titling}
 
+%FIXME: interaction with front/backmatter?
 %This is to make tufte append an Appendix in front of an appendix title, 
 %even though Tufte himself might not have liked appendices?
 %Taken from: https://groups.google.com/forum/#!topic/tufte-latex/oEWGA6624-Y
-\input{appendixCommands}
+% \input{appendixCommands}
 
 \linenumbers
 
@@ -108,7 +109,7 @@
 
 \appendix
 
-\chapter{Detailed studies on mono-jet signatures}
+\chapter{Appendix: Detailed studies on mono-jet signatures}
 \label{app:MonojetLikeModels_Appendix}
 \input{tex/MonojetLikeModels_Appendix.tex}
 
