Added some plots from A. Nelson (acceptances available but still not in), paragraph by Yang Bai
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@74 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -5,7 +5,7 @@
 \usepackage{hyperref}
 \usepackage{lineno}
 \usepackage{epstopdf}
-\usepackage{appendix}
+% \usepackage{appendix}
 
 \usepackage{slashed}
 \usepackage{amsfonts}
@@ -112,6 +112,10 @@
 \chapter{Appendix: Detailed studies on mono-jet signatures}
 \label{app:MonojetLikeModels_Appendix}
 \input{tex/MonojetLikeModels_Appendix.tex}
+
+\chapter{Appendix: Detailed studies for EW models}
+\label{app:EWSpecificModels_Appendix}
+\input{tex/EWSpecificModels_Appendix.tex}
 
 %%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
 % \bibliographystyle{unsrtnat}
