--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -92,14 +92,13 @@ can still be considered as a benchmark for searches with a W boson if $\xi=1$.
 We leave the study of further models with cross-section enhancements due
 to different couplings to up and down quarks for studies beyond the early LHC searches
 covered in this document. 
-\textbf{[TODO: Substitute the following sentence with Yang Bai's paragraph]}. 
 An example of such model is the case of both DM and SM Higgs charged under a new U(1)',
 with a a small mass mixing between SM Z-boson and the new Zprime. This leads
 to different effective DM couplings to $u_L$ and $d_L$, proportional to
-their coupling to the Z boson. 
+their coupling to the Z boson, detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
-The scan in the parameters that characterize of this model follow what
-already detailed in Section~\ref{subsec:MonojetLikeModels}. 
+The scan in the parameters that characterize this simplified model for EW boson + MET 
+searches follow what already detailed in Section~\ref{subsec:MonojetLikeModels}. 
 %FIXME: refer to appropriate subsection
 
 % CD: I tend to like this list so I'll leave it here in hope of recycling it
@@ -164,9 +163,9 @@ benchmark points are shown in Table~\ref{table:x-sec}
       \includegraphics[width=0.45\textwidth]{figures/gull}
     }
     \hfill
-  \subfloat[Fat \textbf{[Insert algorithm]} jet mass ($m_T$) for the the hadronic W+MET final state.\label{fig:DMV_EW_Whad_jetMass}]{%
-      \includegraphics[width=0.45\textwidth]{figures/llug}
-    }
+  \subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET}]{%
+      \includegraphics[width=0.45\textwidth]{figures/EW/monoWhad_Destructive/metPt}
+    }    
     \caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
     for the simplified model with a vector mediator exchanged in the $s-$channel.}
     \label{fig:DMV_EW_kinematics}
