--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -432,7 +432,8 @@ for the signature of a single top quark+MET~\footnote{The non-resonant productio
 contributes to both both MET+t and MET+tt final states.}:
 
 \begin{itemize}
-\item $s$-channel resonant production via a colored scalar mediator decaying into a top quark and a WIMP;
+\item $s$-channel production of a colored scalar resonance, decaying into a top quark and a fermion
+that can decay in two DM candidates;
 \item $s$- and $t$- channel non-resonant production of a top quark and a color singlet, vector mediator which then decays invisibly.
 \end{itemize}
 
