Harmonized structure with summary
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@82 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -40,7 +40,7 @@ the studies towards the choices of the parameters to be scanned,
 and finally point to the location of their Matrix Element 
 implementation. 
 
-\newthought{Simplified models with ISR boson radiation}
+\section{Simplified models with ISR boson radiation}
 
 Searches in the jet+MET final state are generally more sensitive
 with respect to final states including bosons, due to the much 
@@ -64,7 +64,7 @@ still worth comparing with searches in the jet+MET final state.
 % the D1 (scalar SM/WIMP interaction), D5 (vector-vector interaction) and D9 
 % (tensor interaction) operator. 
 
-\paragraph{Vector mediator exchanged in the s-channel}
+\subsection{Vector mediator exchanged in the s-channel}
 
 The case for searches with W bosons in the final state has so far been strenghtened by the 
 presence of particular choices of couplings between the WIMP and the up and 
@@ -171,18 +171,26 @@ benchmark points are shown in Table~\ref{table:x-sec}
     \label{fig:DMV_EW_kinematics}
 \end{figure}
 
-\paragraph{Colored scalar mediator exchanged in the s-channel}
+\subsection{Colored scalar mediator exchanged in the s-channel}
 
 t-channel colored scalar, to be completed...
 
-\paragraph{Model implementation}
+\newthought{Model implementation}
 
 These models are generated at leading order with MadGraph 2.2.2, and parameter
 cards can be found on SVN \textbf{[TODO: Add SVN location]}.
 The parton shower is done using Pythia 8, with a matching scale of... 
 \textbf{[TODO: To be completed.]}
 
-\newthought{EFT models with direct DM-boson couplings}
+\section{EFT models with direct DM-boson couplings}
+
+\textbf{[Linda Carpenter and Uli Haisch are rewriting this section. Changes expected:
+\begin{itemize}
+ \item change of normalization and Lagrangians to be consistent with~\cite{Crivellin:2015wva}, 
+ linked to notation of ~\cite{Carpenter:2012rg}
+ \item description of dimension-5 EFTs
+ \item addition of a dimension-5 simplified model]
+\end{itemize}}
 
 A complete list of effective operators with direct DM/boson couplings for
 Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj}. 
@@ -332,7 +340,7 @@ shown in Fig.~\ref{fig:DMV_EW_kinematics}.
     \label{fig:DMV_EW_kinematics}
 \end{figure}
 
-\paragraph{Specific simplified models}
+\section{Specific simplified models}
 
 Mono-Higgs, to be completed...
 
