--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -7,7 +7,7 @@
 \newcommand{\gq}{g_q}
 \newcommand{\ifb}{\rm{fb}^{-1}}
 
-\subsection{Vector and axial vector mediator, s-channel exchange}
+\section{Vector and axial vector mediator, s-channel exchange}
 \label{sec:monojet_V}
 
 %\begin{itemize}
@@ -211,7 +211,7 @@ The presentation of the results in the $g_q$--$\gDM$ plane for fixed masses bene
 
 
 
-\subsection{Scalar and pseudoscalar mediator, s-channel exchange}
+\section{Scalar and pseudoscalar mediator, s-channel exchange}
 
 %TODO add figure with diagrams
 
@@ -313,7 +313,7 @@ The proposal for the scan in the $g_q$--$\gDM$ plane is described in the followi
 
 
 
-\subsection{Cross section scaling}
+\section{Cross section scaling}
 \label{sec:monojet_scaling}
 
 The aim of the parameter grid optimization is to find out whether certain parts of the parameter space can be omitted and one can rely on the neighboring grid points in order to populate the missing parts. There are two ways of doing this:
@@ -480,7 +480,7 @@ In this way, the events at low $\MET$ are suppressed and receive higher event we
 \end{itemize}
 
 
-\subsection{Colored scalar mediator, t-channel exchange}
+\section{Colored scalar mediator, t-channel exchange}
 
 \input tex/TChannelModels.tex
 
