Mono-top section edited in
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@83 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -6,6 +6,7 @@
 \usepackage{lineno}
 \usepackage{epstopdf}
 % \usepackage{appendix}
+\usepackage{xspace} %for single top
 
 \usepackage{slashed}
 \usepackage{amsfonts}
