--- a/doc/tex/DMHFModels.tex
+++ b/doc/tex/DMHFModels.tex
@@ -2,10 +2,18 @@
 
 \subsection{$b \bar{b}$+MET models}
 
+\input{tex/BBBar.tex}
+
 \subsection{Models with a single $b-$quark + MET}
+
+\input{tex/SingleB.tex}
 
 \section{Specific models for analyses of MET+top quark(s)}
 
 \subsection{$t \bar{t}$+MET models}
 
+\input{tex/TTBar.tex}
+
 \section{Models with a single $top-$quark + MET}
+
+\input{tex/SingleTop.tex}
