add a few comments and clarifications
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@84 4525493e-7705-40b1-a816-d608a930855b

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -100,12 +100,9 @@ The two underlying choices for the model recommendations by the ATLAS/CMS DM For
 
 The highest priority models discussed within the Forum are:
 \begin{itemize}
-\item spin-1 $s$-channel mediators with mass $m_{med}$ and vector or 
-axial-vector coupling to SM quarks $g_q$ and vector or axial-vector coupling to a 
-Dirac fermion WIMP $g_{DM}$ of mass $m_{DM}$;
-\item spin-0 $s$-channel mediators with mass $m_{med}$ and scalar or 
-pseudo-scalar coupling to SM quarks $g_q$ and scalar or pseudo-scalar coupling to a 
-Dirac fermion WIMP $g_{DM}$ of mass $m_{DM}$. 
+\item spin-1 $s$-channel mediators with mass $m_{med}$ and vector coupling to both SM quarks  ($g_q$) and a Dirac fermion WIMP $g_{DM}$ of mass $m_{DM}$ or an axial vector coupling to both SM and DM;
+\item spin-0 $s$-channel mediators with mass $m_{med}$ and scalar coupling to both SM quarks $g_q$ and a 
+Dirac fermion WIMP $g_{DM}$ of mass $m_{DM}$ or pseudoscalar coupling to both SM and DM. 
 \item a colored spin-0 $t$-channel mediator with mass $m_{med}$, with 
 coupling $g$ at the vertex between quark, WIMP (of mass $m_{DM}$) and mediator. 
 \end{itemize}
@@ -127,11 +124,11 @@ width up to $\Gamma \approx m_{med}$.
 
 All types of $s$-channel mediators are important, and ideally an analysis 
 would have to include all cases. On the other hand, the vector and axial-vector models 
-(including those with mixed couplings) produce nearly indistinguishable kinematic distributions 
+(including those with mixed vector-axial couplings) produce nearly indistinguishable kinematic distributions 
 for the MET+X analyses, and the scalar and pseudo-scalar models are also very similar. 
 If one cannot generate all models, one could generate the full grid of mass points for only one of each 
 type (for example, the pure axial vector and pure pseudo-scalar models). 
-\textbf{[Open point: in this situation, do we want to mention which are preferred?]}
+\textbf{[Open point: in this situation, do we want to mention which are preferred? SM: For vector and axial vector, we can probably do with just one, but for scalar and pseudoscalar, I would still say we want both, because both are difficult for DD/ID and add significant complementarity. Anyhow, lets see what people say. ]}
 %TODO: CD: can one have S/PS mixed couplings?
 % Pure axial-vector (plus vector-axial and axial-vector combinations) 
 % and pseudo-scalar versions of the $s$-channel models are
