--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -140,15 +140,20 @@ ranges from 1.05 to 1.5 with increasing mediator masses).
 \end{figure}
 
 Examples of relevant kinematic distributions for selected benchmark points are
-shown in Fig.~\ref{fig:DMV_EW_kinematics}; leading-order cross-sections for the chosen 
+shown in Fig.~\ref{fig:DMV_EW_kinematics}; 
+leading-order cross-sections for the chosen 
 benchmark points are shown in Table~\ref{table:x-sec}
 \textbf{[TODO: Insert table of cross-sections]}.
 
 \begin{figure}[h!]
   \centering  
+% %   \subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
+% %   different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET}]{%
+% %       \includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
+% %     }%TODO: add this + equivalent plot of MET to appendix
   \subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
-  different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET}]{%
-      \includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
+  different mediator mass choices, for a DM mass of ?? GeV.\label{fig:DMV_EW_gamma_MET}]{%
+      \includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
     }%TODO: add equivalent plot of MET to appendix
     \hfill
   \subfloat[Leading photon transverse momentum distribution for the photon+MET final state, 
@@ -164,18 +169,42 @@ benchmark points are shown in Table~\ref{table:x-sec}
     }
     \hfill
   \subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET}]{%
-      \includegraphics[width=0.45\textwidth]{figures/EW/monoWhad_Destructive/metPt}
+      \includegraphics[width=0.9\textwidth]{figures/EW/monoWhad_Destructive/metPt}
     }    
     \caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
     for the simplified model with a vector mediator exchanged in the $s-$channel.}
     \label{fig:DMV_EW_kinematics}
 \end{figure}
 
-\subsection{Colored scalar mediator exchanged in the s-channel}
+\subsection{Colored scalar mediator exchanged in the t-channel}
 
-t-channel colored scalar, to be completed...
+The model parameters with emission of an EW boson follow those in Section~\ref{subsec:MonojetLikeModels}.
 
-\newthought{Model implementation}
+Figure~\ref{fig:TChan_EW_Zhad_MET} shows the MET distribution for the hadronic Z+MET final state, 
+with varying dark matter and mediator mass, before any selection. 
+The acceptance for a series of simplified analysis cuts 
+(MET$>$350 GeV, leading jet $p_T >$ 40 GeV, minimum azimuthal angle between jet and MET > 0.4) 
+applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}. 
+
+The parameter scan is still under discussion. 
+
+\begin{figure}[h!]
+  \centering  
+      \includegraphics[width=0.9\textwidth]{figures/EW/monoZhad_TChannel/metPt}
+    \caption{Missing transverse momentum distribution for the hadronic Z+MET final state,
+    for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
+    \label{fig:TChan_EW_Zhad_MET}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering  
+      \includegraphics[width=0.9\textwidth]{figures/EW/monoZhad_TChannel/acc}
+    \caption{Acceptance table for the hadronic Z+MET final state,
+    for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
+    \label{fig:TChan_EW_Zhad_acc}
+\end{figure}
+
+\subsection{Model implementation}
 
 These models are generated at leading order with MadGraph 2.2.2, and parameter
 cards can be found on SVN \textbf{[TODO: Add SVN location]}.
@@ -260,7 +289,7 @@ and their correlations. For example, for what concerns searches with W, Z and ph
 The coefficients $k_1$ and $k_2$ are related to the coefficients $c_1$ and $c_2$ 
 in the equivalent models of Ref.~\cite{Crivellin:2015wva} as $k_2 = s_w^2*c_2$ and $k_1=c_w^2 *c_1$.
 
-\textbf{[TODO: Linda will possibly complete/correct this paragraph]} UV completions of 
+\textbf{[TODO: Linda will possibly complete/correct this subsection]} UV completions of 
 such operators where the dominant signature is a single photon or EW boson are possible, 
 for example through the exchange of a W' or a Z'. They are left as benchmarks for future searches as 
 their implementation may require loop diagrams and need further studies beyond the timescale of this Forum. 
@@ -269,12 +298,9 @@ As shown in Fig.~\ref{fig:EW_EFT5_Zlep_MET}
 kinematics of this model can be approximated by that of a simplified model including 
 a high-mass scalar mediator exchanged in the s-channel. For this reason, 
 the list of benchmark models with direct boson-DM couplings only includes dimension 7 operators. 
-\textbf{[TODO: then we need to recommend the scalar mediator, 
-but then the sensitivity is very poor wrt monojets - however, I still prefer
-to generate a few (high-mass) simplified model points wrt an EFT if given the choice.]}
 
 \begin{figure}
-    \includegraphics[width=0.6\textwidth]{figures/gull}
+    \includegraphics[width=0.6\textwidth]{figures/EW/pt_vv2_xxDHDH_vs_ScalarMediator.pdf}
     \caption{Comparison of the missing transverse momentum for the simplified model
     where a scalar mediator is exchanged in the s-channel and the model including 
     a dimension-5 scalar contact operator, in the leptonic Z+MET final state}
@@ -340,7 +366,7 @@ shown in Fig.~\ref{fig:DMV_EW_kinematics}.
     \label{fig:DMV_EW_kinematics}
 \end{figure}
 
-\section{Specific simplified models}
+\subsection{Specific simplified models}
 
 Mono-Higgs, to be completed...
 
